--- a/bin/pom.xml
+++ b/bin/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>cl.changapp</groupId>
 	<artifactId>changapp</artifactId>
-	<version>1.0.0</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<name>changapp</name>
 	<description>ChangApp Backend</description>
 	<url/>
@@ -81,18 +81,6 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-		  <groupId>io.jsonwebtoken</groupId>
-		  <artifactId>jjwt</artifactId>
-		  <version>0.9.1</version>
-		</dependency>
-		<dependency>
-		  <groupId>com.auth0</groupId>
-		  <artifactId>java-jwt</artifactId>
-		  <version>4.4.0</version>
-		</dependency>
-
-
 	</dependencies>
 
 	<build>
