--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=changapp
+
+# PostgreSQL connection
+spring.datasource.url=jdbc:postgresql://localhost:5432/changapp_dev
+spring.datasource.username=postgres
+spring.datasource.password=Changapp2025
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Hibernate config (opcional pero recomendado)
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# MongoDB connection
+spring.data.mongodb.uri=mongodb://localhost:27017/changapp
+
