include JWT security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=changapp
+server.port=8080
 
 # PostgreSQL connection
 spring.datasource.url=jdbc:postgresql://localhost:5432/changapp_dev
