--- a/pom.xml
+++ b/pom.xml
@@ -82,15 +82,39 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-		  <groupId>io.jsonwebtoken</groupId>
-		  <artifactId>jjwt</artifactId>
-		  <version>0.9.1</version>
-		</dependency>
+	        <groupId>io.jsonwebtoken</groupId>
+	        <artifactId>jjwt-api</artifactId>
+	        <version>0.11.5</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>io.jsonwebtoken</groupId>
+	        <artifactId>jjwt-impl</artifactId>
+	        <version>0.11.5</version>
+	        <scope>runtime</scope>
+	    </dependency>
+	    <dependency>
+        <groupId>io.jsonwebtoken</groupId>
+	        <artifactId>jjwt-jackson</artifactId>
+	        <version>0.11.5</version>
+	        <scope>runtime</scope>
+	    </dependency>
 		<dependency>
 		  <groupId>com.auth0</groupId>
 		  <artifactId>java-jwt</artifactId>
 		  <version>4.4.0</version>
 		</dependency>
+		
+		<!-- Validación -->
+	    <dependency>
+	        <groupId>jakarta.validation</groupId>
+	        <artifactId>jakarta.validation-api</artifactId>
+	    </dependency>
+	    
+	    <dependency>
+	        <groupId>org.springdoc</groupId>
+	        <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+	        <version>2.2.0</version>
+	    </dependency>
 
 
 	</dependencies>
