Functional WebSocket inclusion

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # MongoDB connection
-spring.data.mongodb.uri=mongodb://localhost:27017/changapp
+spring.data.mongodb.uri=mongodb://localhost:27017/changapp_dev
 
