--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,13 @@ spring.jpa.show-sql=true
 # MongoDB connection
 spring.data.mongodb.uri=mongodb://localhost:27017/changapp_dev
 
+spring.security.oauth2.client.registration.google.client-id=194662532643-61m60039ae327cuclt72i6nsoli9jcul.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.google.scope=openid, profile, email
+
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+spring.security.oauth2.client.provider.google.user-name-attribute=sub
+
